[gd_scene load_steps=37 format=3 uid="uid://xgdh0qugqi3r"]

[ext_resource type="Script" path="res://main.gd" id="1_o512k"]
[ext_resource type="Script" path="res://ChrList.gd" id="2_j1lse"]
[ext_resource type="Script" path="res://Section.gd" id="3_wyqu0"]
[ext_resource type="Script" path="res://SubViewport1.gd" id="4_cy32y"]
[ext_resource type="Script" path="res://line.gd" id="4_guy1f"]
[ext_resource type="Script" path="res://mapmesh.gd" id="4_vxpqr"]
[ext_resource type="Script" path="res://highlight.gd" id="5_ifpmu"]
[ext_resource type="Script" path="res://25.gd" id="5_qld63"]
[ext_resource type="Script" path="res://sectionMarker.gd" id="7_8h2vu"]
[ext_resource type="Script" path="res://SectionSlider.gd" id="7_301yy"]
[ext_resource type="Script" path="res://ZoomSlider.gd" id="7_oeub5"]
[ext_resource type="Script" path="res://SubViewportMap.gd" id="8_ibehh"]
[ext_resource type="Script" path="res://PanSlider.gd" id="8_ongl5"]
[ext_resource type="Script" path="res://SampleChoice.gd" id="8_xjjv1"]
[ext_resource type="Script" path="res://TailEndLabel.gd" id="9_fcdqv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrxgc"]

[sub_resource type="Theme" id="Theme_ol2iq"]
HSlider/styles/grabber_area = SubResource("StyleBoxEmpty_mrxgc")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxEmpty_mrxgc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a3d6j"]
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="ArrayMesh" id="ArrayMesh_sui0p"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_oa4uq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_o24gn"]
sky_material = SubResource("ProceduralSkyMaterial_oa4uq")

[sub_resource type="Environment" id="Environment_sm60y"]
background_mode = 1
sky = SubResource("Sky_o24gn")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r23nq"]
shading_mode = 0
albedo_color = Color(0.427451, 0.427451, 0.427451, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_lc8jo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nbff3"]
shading_mode = 0
albedo_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="QuadMesh" id="QuadMesh_jtuww"]
size = Vector2(10000, 100)
center_offset = Vector3(0, -100, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmovo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lipju"]

[sub_resource type="Environment" id="Environment_a4uyk"]

[sub_resource type="World3D" id="World3D_crkn2"]
environment = SubResource("Environment_a4uyk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ykt7t"]
shading_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_q57ro"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vs246"]
shading_mode = 0
albedo_color = Color(0.211765, 0.211765, 0.211765, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4nxus"]
material = SubResource("StandardMaterial3D_vs246")
size = Vector3(1000, 200, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m5hod"]
shading_mode = 0
albedo_color = Color(0.109804, 0.219608, 0.301961, 1)

[sub_resource type="QuadMesh" id="QuadMesh_0k7xr"]
material = SubResource("StandardMaterial3D_m5hod")
size = Vector2(5, 200)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ol2iq")
script = ExtResource("1_o512k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileVStack" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="FilePathBox" type="HBoxContainer" parent="HBoxContainer/FileVStack"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="FilePath" type="LineEdit" parent="HBoxContainer/FileVStack/FilePathBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "FASTA file path"

[node name="LoadButton" type="Button" parent="HBoxContainer/FileVStack/FilePathBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Load"

[node name="ChrList" type="ItemList" parent="HBoxContainer/FileVStack"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_j1lse")

[node name="Section" type="SpinBox" parent="HBoxContainer/FileVStack"]
layout_mode = 2
update_on_text_changed = true
suffix = " / x 100-mers"
script = ExtResource("3_wyqu0")

[node name="AnalyzeButton" type="Button" parent="HBoxContainer/FileVStack"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Analyze"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ViewerVStack" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1558, 627)
render_target_update_mode = 4
script = ExtResource("4_cy32y")

[node name="Node3D" type="Node3D" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 342.35)
cull_mask = 1048573
projection = 1
size = 300.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
material_overlay = SubResource("StandardMaterial3D_a3d6j")
cast_shadow = 0
mesh = SubResource("ArrayMesh_sui0p")
script = ExtResource("4_guy1f")

[node name="WorldEnvironment" type="WorldEnvironment" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D"]
environment = SubResource("Environment_sm60y")

[node name="YScale" type="MeshInstance3D" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.87563)
material_overlay = SubResource("StandardMaterial3D_r23nq")
mesh = SubResource("ArrayMesh_lc8jo")
script = ExtResource("5_qld63")

[node name="Below25" type="MeshInstance3D" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14.8143)
material_overlay = SubResource("StandardMaterial3D_nbff3")
mesh = SubResource("QuadMesh_jtuww")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="ZoomSlider" type="VSlider" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 1500.0
step = 0.1
value = 1.0
exp_edit = true
script = ExtResource("7_oeub5")

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[node name="PanSlider" type="HSlider" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
min_value = -100.0
step = 0.01
script = ExtResource("8_ongl5")

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[node name="RangeSelection" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ViewerVStack"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="Range1" type="SpinBox" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
update_on_text_changed = true

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
text = "to"

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="Range2" type="SpinBox" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
update_on_text_changed = true

[node name="VSeparator5" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection"]
layout_mode = 2
text = "Go"

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/MarginContainer/ViewerVStack"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 8
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_crkn2")
transparent_bg = true
handle_input_locally = false
size = Vector2i(1596, 300)
render_target_update_mode = 4
script = ExtResource("8_ibehh")

[node name="Node3D" type="Node3D" parent="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 261.137)
keep_aspect = 0
cull_mask = 1048574
projection = 1
size = 1000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, -50, 0)
layers = 2
material_overlay = SubResource("StandardMaterial3D_ykt7t")
cast_shadow = 0
mesh = SubResource("ArrayMesh_q57ro")
skeleton = NodePath("../Camera3D")
script = ExtResource("4_vxpqr")

[node name="highlight" type="MeshInstance3D" parent="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
layers = 2
mesh = SubResource("BoxMesh_4nxus")
script = ExtResource("5_ifpmu")

[node name="sectionMarker" type="MeshInstance3D" parent="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.1843)
layers = 2
mesh = SubResource("QuadMesh_0k7xr")
script = ExtResource("7_8h2vu")

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[node name="SampleChoiceBox" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SampleChoice" type="SpinBox" parent="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox"]
layout_mode = 2
size_flags_horizontal = 4
update_on_text_changed = true
script = ExtResource("8_xjjv1")

[node name="TailEndLabel" type="Label" parent="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox"]
layout_mode = 2
text = " to 1 x 100"
script = ExtResource("9_fcdqv")

[node name="VSeparator5" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="Re-Analyze Button" type="Button" parent="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox"]
layout_mode = 2
text = "Re-Analyze
"

[node name="VSeparator6" type="VSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="AutoCheckButton" type="CheckButton" parent="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox"]
layout_mode = 2
tooltip_text = "Run analysis immediately after slider movement."
button_pressed = true
text = "Auto"

[node name="HSeparator6" type="HSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[node name="SectionSlider" type="HSlider" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
script = ExtResource("7_301yy")

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/MarginContainer/ViewerVStack"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[connection signal="add_item" from="." to="HBoxContainer/FileVStack/ChrList" method="_on_control_add_item"]
[connection signal="make_line" from="." to="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" method="_on_control_make_line"]
[connection signal="make_line" from="." to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" method="_on_control_make_line"]
[connection signal="reset_zoom" from="." to="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/ZoomSlider" method="_on_control_reset_zoom"]
[connection signal="reset_zoom" from="." to="HBoxContainer/MarginContainer/ViewerVStack/PanSlider" method="_on_control_reset_zoom"]
[connection signal="section_limit" from="." to="HBoxContainer/FileVStack/Section" method="_on_control_section_limit"]
[connection signal="section_slider_limit" from="." to="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/SampleChoice" method="_on_control_section_slider_limit"]
[connection signal="section_slider_limit" from="." to="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" method="_on_control_section_slider_limit"]
[connection signal="section_slider_to" from="." to="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/SampleChoice" method="_on_control_section_slider_to"]
[connection signal="section_slider_to" from="." to="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" method="_on_control_section_slider_to"]
[connection signal="set_marker" from="." to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/sectionMarker" method="_on_control_set_marker"]
[connection signal="text_changed" from="HBoxContainer/FileVStack/FilePathBox/FilePath" to="." method="_on_file_path_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/FileVStack/FilePathBox/FilePath" to="." method="_on_file_path_text_submitted"]
[connection signal="button_up" from="HBoxContainer/FileVStack/FilePathBox/LoadButton" to="." method="_on_load_button_button_up"]
[connection signal="item_selected" from="HBoxContainer/FileVStack/ChrList" to="." method="_on_chr_list_item_selected"]
[connection signal="multi_selected" from="HBoxContainer/FileVStack/ChrList" to="." method="_on_chr_list_multi_selected"]
[connection signal="value_changed" from="HBoxContainer/FileVStack/Section" to="." method="_on_section_value_changed"]
[connection signal="button_up" from="HBoxContainer/FileVStack/AnalyzeButton" to="." method="_on_analyze_button_button_up"]
[connection signal="gui_input" from="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer" to="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport" method="_on_sub_viewport_container_gui_input"]
[connection signal="size_changed" from="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport" to="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport" method="_on_size_changed" flags=18]
[connection signal="line_length_to_highlight" from="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/highlight" method="_on_mesh_instance_3d_line_length_to_highlight"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/ZoomSlider" to="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" method="_on_zoom_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/ZoomSlider" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/highlight" method="_on_v_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/PanSlider" to="HBoxContainer/MarginContainer/ViewerVStack/HBoxContainer/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" method="_on_pan_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/PanSlider" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/highlight" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection/Range1" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/highlight" method="_on_range_1_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/RangeSelection/Range2" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport/Node3D/highlight" method="_on_range_2_value_changed"]
[connection signal="gui_input" from="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport" method="_on_sub_viewport_container_gui_input"]
[connection signal="map_clicked" from="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport" to="HBoxContainer/MarginContainer/ViewerVStack/PanSlider" method="_on_sub_viewport_map_clicked"]
[connection signal="size_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport" to="HBoxContainer/MarginContainer/ViewerVStack/SubViewportContainer/SubViewport" method="_on_size_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/SampleChoice" to="." method="_on_sample_choice_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/SampleChoice" to="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/TailEndLabel" method="_on_sample_choice_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/SampleChoice" to="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" method="_on_sample_choice_value_changed"]
[connection signal="button_up" from="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/Re-Analyze Button" to="." method="_on_re_analyze_button_button_up"]
[connection signal="toggled" from="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/AutoCheckButton" to="." method="_on_check_button_toggled"]
[connection signal="drag_ended" from="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" to="." method="_on_section_slider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" to="." method="_on_section_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" to="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/SampleChoice" method="_on_section_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/ViewerVStack/SectionSlider" to="HBoxContainer/MarginContainer/ViewerVStack/SampleChoiceBox/TailEndLabel" method="_on_section_slider_value_changed"]
